--- a/bt2202/show.html
+++ b/bt2202/show.html
@@ -10,8 +10,6 @@
 <body>
     <div class="container">
         <div class="btn">
-            <button class="show-btn">Show List</button>
-            <button class="hide-btn">Hide List</button>
             <button class="logout-btn">Logout</button>
         </div>
         <table border="1" cellpadding="5">
@@ -22,6 +20,7 @@
                     <th class="table__age">Age</th>
                     <th class="table__email">E-mail</th>
                     <th class="table__pwd">Password</th>
+                    <th class="table__edit">Edit</th>
                 </tr>
             </thead>
             <tbody id="result">
